@@ -114,28 +114,44 @@ public class ManagementHabitServiceImpl implements ManagementHabitService {
                             languageService.findByCode(habitTranslationDto.getLanguageCode()),
                             Language.class))
                         .build())
-                    .collect(Collectors.toList()))
+                    .toList())
             .build();
         habit.getHabitTranslations().forEach(habitTranslation -> habitTranslation.setHabit(habit));
         return habit;
     }
 
+//    /**
+//     * Method sets new image path for {@link Habit}.
+//     *
+//     * @param habitManagementDto {@link HabitManagementDto} instance.
+//     * @param image              {@link MultipartFile} image.
+//     * @param habit              {@link Habit} instance.
+//     */
+//    private void uploadImageForHabit(HabitManagementDto habitManagementDto, MultipartFile image, Habit habit) {
+//        if (image == null) {
+//            if (habitManagementDto.getImage() == null) {
+//                habit.setImage(AppConstant.DEFAULT_HABIT_IMAGE);
+//            } else {
+//                habit.setImage(habitManagementDto.getImage());
+//            }
+//        } else {
+//            fileService.upload(image);
+//        }
+//    }
+
     /**
-     * Method sets new image path for {@link Habit}.
+     * Handles image assignment or uploading for the {@link Habit}.
      *
      * @param habitManagementDto {@link HabitManagementDto} instance.
      * @param image              {@link MultipartFile} image.
      * @param habit              {@link Habit} instance.
      */
     private void uploadImageForHabit(HabitManagementDto habitManagementDto, MultipartFile image, Habit habit) {
-        if (image == null) {
-            if (habitManagementDto.getImage() == null) {
-                habit.setImage(AppConstant.DEFAULT_HABIT_IMAGE);
-            } else {
-                habit.setImage(habitManagementDto.getImage());
-            }
+        if (image != null && !image.isEmpty()) {
+            habit.setImage(fileService.upload(image));
         } else {
-            fileService.upload(image);
+            habit.setImage(habitManagementDto.getImage() != null ?
+                    habitManagementDto.getImage() : AppConstant.DEFAULT_HABIT_IMAGE);
         }
     }
 
